kubernetes-deploy/rstudio/rstudio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rstudio
  namespace: botanical
spec:
  selector:
    app: rstudio
  ports:
    - protocol: TCP
      port: 8787
      targetPort: 4180
  type: ClusterIP
